# nonogram

./: README.md  cat.txt  dotfile.txt  fan_d2.txt  file.txt  horse_d2.txt  house.txt  lambda.txt  moose_d1.txt  nonogram.cabal  nonogram.hs  puppy_d3.txt  snail.txt
app/: Main.hs
ind_tasks/Kate's_task/: README.md  nonogram.cabal  umbr.txt
ind_tasks/Kate's_task/src/: DrawLogic.hs  FileInput.hs  GraphicInterface.hs  Types.hs
ind_tasks/Natalie's_task/: Natalie-s-task.cabal  README.md  dotfile.txt  filereader.hs
src/: AutoSolver.hs  DotInput.hs  DrawLogic.hs  FileInput.hs  GraphicInterface.hs  SolverInterface.hs  Types.hs
